--- a/web/package.json
+++ b/web/package.json
@@ -8,11 +8,14 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.0",
+    "html2canvas": "^1.4.1",
     "phosphor-react": "^1.4.1",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "tailwind-scrollbar": "^1.3.1"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.1",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react": "^1.0.0",
